objects/LeaveTab__c.object
<CustomObject>
    <fields>
        <fullName>LeaveStatus__c</fullName>
        <label>LeaveStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <label>No.of.Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>LeaveTab</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeaveTabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>